# docs/swagger.json
@@ -96,6 +96,22 @@
                 "responses": {}
             }
         },
+        "/api/polka/webhooks": {
+            "post": {
+                "parameters": [
+                    {
+                        "description": "webhook",
+                        "name": "webhook",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.PolkaWebhook"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/refresh": {
             "post": {
                 "parameters": [
@@ -167,6 +183,22 @@
             "type": "object",
             "properties": {
                 "body": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.PolkaWebhook": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object",
+                    "properties": {
+                        "user_id": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "event": {
                     "type": "string"
                 }
             }
